Filtering Methods Update

--- a/N-Gram/DataSet/ngram1 [1-20]/Management-1.ipynb
+++ b/N-Gram/DataSet/ngram1 [1-20]/Management-1.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21 files detected under current directory. \n"
+      "42 files detected under current directory. \n"
      ]
     }
    ],
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1161,76 +1163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>word</th>\n",
-       "      <th>freq</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>licensing</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>written</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>examination</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>test</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>workers</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          word freq\n",
-       "0    licensing   58\n",
-       "1      written   40\n",
-       "2  examination   32\n",
-       "3         test   32\n",
-       "4      workers   27"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data_word' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-cccdbb17e080>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# DataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_word' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1256,9 +1201,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          word freq\n",
+      "0    licensing   58\n",
+      "1      written   40\n",
+      "2  examination   32\n",
+      "3         test   32\n",
+      "4      workers   27\n",
+      "     word freq\n",
+      "0      pp   39\n",
+      "1   paper   27\n",
+      "2   cloth   17\n",
+      "3   price   17\n",
+      "4  listed   16\n",
+      "      word freq\n",
+      "0   search  112\n",
+      "1      job   55\n",
+      "2      ojs   51\n",
+      "3     wage   43\n",
+      "4  workers   35\n",
+      "        word freq\n",
+      "0      costs  103\n",
+      "1  treatment   83\n",
+      "2       were   82\n",
+      "3   patients   78\n",
+      "4    program   75\n",
+      "      word freq\n",
+      "0    james   15\n",
+      "1     john   15\n",
+      "2  richard   13\n",
+      "3     alan   11\n",
+      "4    david   10\n",
+      "       word freq\n",
+      "0    income  142\n",
+      "1  families  135\n",
+      "2   marital  119\n",
+      "3     rates   89\n",
+      "4    family   83\n",
+      "           word freq\n",
+      "0      earnings   63\n",
+      "1   achievement   37\n",
+      "2    motivation   35\n",
+      "3    background   34\n",
+      "4  intelligence   33\n",
+      "       word freq\n",
+      "0  teachers  160\n",
+      "1    school   85\n",
+      "2   teacher   72\n",
+      "3   schools   53\n",
+      "4  transfer   42\n",
+      "       word freq\n",
+      "0  earnings   41\n",
+      "1   college   20\n",
+      "2  security   18\n",
+      "3    social   18\n",
+      "4    school   16\n",
+      "       word freq\n",
+      "0        ui   64\n",
+      "1    search   48\n",
+      "2       job   28\n",
+      "3  benefits   25\n",
+      "4      data   15\n",
+      "         word freq\n",
+      "0        quit   86\n",
+      "1         pay   71\n",
+      "2  government   65\n",
+      "3        size   64\n",
+      "4        firm   54\n",
+      "         word freq\n",
+      "0   wisconsin   20\n",
+      "1   economics   18\n",
+      "2    research   13\n",
+      "3  university    7\n",
+      "4     poverty    6\n",
+      "        word freq\n",
+      "0         pp   48\n",
+      "1      paper   29\n",
+      "2      cloth   27\n",
+      "3  institute   11\n",
+      "4      price   11\n",
+      "        word freq\n",
+      "0     mental  148\n",
+      "1     health  141\n",
+      "2   coverage   80\n",
+      "3  insurance   77\n",
+      "4   services   76\n",
+      "         word freq\n",
+      "0   wisconsin   10\n",
+      "1     journal    9\n",
+      "2    research    9\n",
+      "3       human    8\n",
+      "4  university    7\n",
+      "        word freq\n",
+      "0    poverty  130\n",
+      "1   earnings  114\n",
+      "2  transfers   98\n",
+      "3     growth   56\n",
+      "4        aed   50\n",
+      "        word freq\n",
+      "0     mental   58\n",
+      "1     health   48\n",
+      "2       care   19\n",
+      "3  treatment   17\n",
+      "4        has   16\n",
+      "           word freq\n",
+      "0  unemployment   99\n",
+      "1      training   71\n",
+      "2        effect   48\n",
+      "3         labor   45\n",
+      "4       teenage   44\n",
+      "         word freq\n",
+      "0   wisconsin   20\n",
+      "1   economics   16\n",
+      "2    research   13\n",
+      "3     poverty    7\n",
+      "4  university    7\n",
+      "       word freq\n",
+      "0    social   46\n",
+      "1  security   42\n",
+      "2    system   17\n",
+      "3   program   15\n",
+      "4  derthick   12\n"
+     ]
+    }
+   ],
    "source": [
     "# Run filtering for each file\n",
     "for file in filtered_list:\n",
@@ -1324,10 +1396,8 @@
     "        output_file.write(word.ljust(max_length + 5))\n",
     "        output_file.write(freq + \"\\n\")\n",
     "    \n",
-    "    \n",
     "    output_file.close()\n",
-    "    \n",
-    "#     print(dataframe.head())\n",
+    "    print(dataframe.head())\n",
     "\n",
     "    "
    ]
