fixed encoding and decoding

--- a/N-Gram/DataSet/Management-2-Uncompress.ipynb
+++ b/N-Gram/DataSet/Management-2-Uncompress.ipynb
@@ -9,8 +9,8 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Error Code:\n",
-    "    0: Error opening file\n",
+    "The file analylizes the .txt files (which contains ngram2 data) in ngram2 folder \n",
+    "in a zip file and output in a folder \n",
     "\"\"\"\n",
     "\n",
     "import pandas as pd\n",
@@ -73,31 +73,6 @@
     "file_name_list = zip_file.namelist()\n",
     "# Should return 4 folders if testing on ASG Zip\n",
     "print(\"{0} files detected under current directory. \".format(len(file_name_list)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# def filter_by_foldername(folder_name_list):\n",
-    "#     \"\"\"Function filtering folders by their names \n",
-    "#     Only accepts the folder corresponded to the work purpose for this .ipynb\n",
-    "#     \"\"\"\n",
-    "#     filtered_list = []\n",
-    "#     for foldername in folder_name_list:\n",
-    "#         assert isinstance(filename, str)\n",
-    "#         # Check if the first 5 letters of the folder name is ngram-N\n",
-    "#         # where N is the mission N number for this .ipynb\n",
-    "#         if foldername.startswith(\"ngram\" + N_number, 0, 5):\n",
-    "#             filtered_list.append(foldername)\n",
-    "#     return filtered_list\n",
-    "\n",
-    "# folder_name = filter_by_foldername(folder_name_list)\n",
-    "# folder = zip_file.open(folder_name)"
    ]
   },
   {
@@ -884,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -967,8 +942,9 @@
     "        exit(0)\n",
     "    \n",
     "    # Create output file\n",
-    "    output_name = \"Results\" + file[len(zip_file_name) + len(\"/ngram\" + str(N_number)):]\n",
-    "    output_file = open(output_name, mode=\"w+\")\n",
+    "    output_name = \"Results_2\" + file[len(zip_file_name) + len(\"/ngram\" + str(N_number)):]\n",
+    "    # Note: Output file encoding set to UTF-8\n",
+    "    output_file = open(output_name, mode=\"w+\", encoding=\"utf-8\")\n",
     "    \n",
     "    # Track for max length word\n",
     "    # Used for formatting output data\n",
@@ -979,7 +955,8 @@
     "    \n",
     "    # Read by line\n",
     "    for line in file_open:\n",
-    "        line = line.decode(\"ascii\")\n",
+    "        # Line decode using UTF-8\n",
+    "        line = line.decode(\"utf-8\")\n",
     "        assert isinstance(line, str)\n",
     "        pair = line.strip().split()\n",
     "    \n",
