--- a/N-Gram/DataSet/Management-3-Uncompress.ipynb
+++ b/N-Gram/DataSet/Management-3-Uncompress.ipynb
@@ -6419,7 +6419,8 @@
     "    \n",
     "    # Create output file\n",
     "    output_name = \"Results_3\" + file[len(zip_file_name) + len(\"/ngram\" + str(N_number)):]\n",
-    "    output_file = open(output_name, mode=\"w+\")\n",
+    "    # Note: Output file encoding set to UTF-8\n",
+    "    output_file = open(output_name, mode=\"w+\", encoding=\"utf-8\")\n",
     "    \n",
     "    # Track for max length word\n",
     "    # Used for formatting output data\n",
@@ -6430,10 +6431,8 @@
     "    \n",
     "    # Read by line\n",
     "    for line in file_open:\n",
-    "        try:\n",
-    "            line = line.decode(\"ascii\")\n",
-    "        except:\n",
-    "            line = line.decode(\"utf-8\")\n",
+    "        # Line decode using UTF-8\n",
+    "        line = line.decode(\"utf-8\")\n",
     "        \n",
     "        # line -> \"teachers who taught 5\"\n",
     "        assert isinstance(line, str)\n",
