Added verfied merge file which outputs DataFrame containing all word pairs with their accumulated frequencies appeared in the training data

--- a/N-Gram/DataSet/Management-2-Uncompress.ipynb
+++ b/N-Gram/DataSet/Management-2-Uncompress.ipynb
@@ -3735,21 +3735,24 @@
     "    # Close reading file\n",
     "    file_open.close()\n",
     "    \n",
-    "    # Create Dataframe\n",
-    "    # Data\n",
-    "    data = []\n",
-    "    for words, freq in freq_list:\n",
-    "        assert len(words) == 2\n",
-    "        data.append([words[0], words[1], freq])\n",
+    "    \"\"\" [START] Create Dataframe \"\"\" \n",
+    "    \n",
+    "#     # Data\n",
+    "#     data = []\n",
+    "#     for words, freq in freq_list:\n",
+    "#         assert len(words) == 2\n",
+    "#         data.append([words[0], words[1], freq])\n",
     "\n",
-    "    # Columns\n",
-    "    columns = [\"word1\", \"word2\", \"freq\"]\n",
+    "#     # Columns\n",
+    "#     columns = [\"word1\", \"word2\", \"freq\"]\n",
     "\n",
-    "    # Index\n",
-    "    index = list(range(len(freq_list)))\n",
+    "#     # Index\n",
+    "#     index = list(range(len(freq_list)))\n",
     "\n",
-    "    # DataFrame\n",
-    "    dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "#     # DataFrame\n",
+    "#     dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "\n",
+    "    \"\"\" [END] Create Dataframe \"\"\" \n",
     "    \n",
     "    # Write to output file\n",
     "    for words, freq in freq_list:\n",
