--- a/N-Gram/DataSet/Management-1-Uncompress.ipynb
+++ b/N-Gram/DataSet/Management-1-Uncompress.ipynb
@@ -1886,21 +1886,24 @@
     "    # Close reading file\n",
     "    file_open.close()\n",
     "    \n",
-    "    # Create Dataframe\n",
-    "    # Data\n",
-    "    data = []\n",
-    "    for word in freq_dict:\n",
-    "        freq = freq_dict[word]\n",
-    "        data.append([word, freq])\n",
+    "      \"\"\" [START] Create Dataframe \"\"\" \n",
+    "        \n",
+    "#     # Data\n",
+    "#     data = []\n",
+    "#     for word in freq_dict:\n",
+    "#         freq = freq_dict[word]\n",
+    "#         data.append([word, freq])\n",
     "    \n",
-    "    # Columns\n",
-    "    columns = [\"word\", \"freq\"]\n",
+    "#     # Columns\n",
+    "#     columns = [\"word\", \"freq\"]\n",
     "    \n",
-    "    # Index\n",
-    "    index = list(range(len(freq_dict)))\n",
+    "#     # Index\n",
+    "#     index = list(range(len(freq_dict)))\n",
     "    \n",
-    "    # DataFrame\n",
-    "    dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "#     # DataFrame\n",
+    "#     dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "\n",
+    "    \"\"\" [END] Create Dataframe \"\"\" \n",
     "    \n",
     "    # Write to output file\n",
     "    for word in freq_dict:\n",
