--- a/N-Gram/DataSet/Management-3-Uncompress.ipynb
+++ b/N-Gram/DataSet/Management-3-Uncompress.ipynb
@@ -4007,7 +4007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4116,7 +4116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4124,7 +4124,111 @@
      "output_type": "stream",
      "text": [
       "Progress: 0%\n",
-      "Progress: 1%\n"
+      "Progress: 1%\n",
+      "Progress: 2%\n",
+      "Progress: 3%\n",
+      "Progress: 4%\n",
+      "Progress: 5%\n",
+      "Progress: 6%\n",
+      "Progress: 7%\n",
+      "Progress: 8%\n",
+      "Progress: 9%\n",
+      "Progress: 10%\n",
+      "Progress: 11%\n",
+      "Progress: 12%\n",
+      "Progress: 13%\n",
+      "Progress: 14%\n",
+      "Progress: 15%\n",
+      "Progress: 16%\n",
+      "Progress: 17%\n",
+      "Progress: 18%\n",
+      "Progress: 19%\n",
+      "Progress: 20%\n",
+      "Progress: 21%\n",
+      "Progress: 22%\n",
+      "Progress: 23%\n",
+      "Progress: 24%\n",
+      "Progress: 25%\n",
+      "Progress: 26%\n",
+      "Progress: 27%\n",
+      "Progress: 28%\n",
+      "Progress: 29%\n",
+      "Progress: 30%\n",
+      "Progress: 31%\n",
+      "Progress: 32%\n",
+      "Progress: 33%\n",
+      "Progress: 34%\n",
+      "Progress: 35%\n",
+      "Progress: 36%\n",
+      "Progress: 37%\n",
+      "Progress: 38%\n",
+      "Progress: 39%\n",
+      "Progress: 40%\n",
+      "Progress: 41%\n",
+      "Progress: 42%\n",
+      "Progress: 43%\n",
+      "Progress: 44%\n",
+      "Progress: 45%\n",
+      "Progress: 46%\n",
+      "Progress: 47%\n",
+      "Progress: 48%\n",
+      "Progress: 49%\n",
+      "Progress: 50%\n",
+      "Progress: 51%\n",
+      "Progress: 52%\n",
+      "Progress: 53%\n",
+      "Progress: 54%\n",
+      "Progress: 55%\n",
+      "Progress: 56%\n",
+      "Progress: 57%\n",
+      "Progress: 58%\n",
+      "Progress: 59%\n",
+      "Progress: 60%\n",
+      "Progress: 61%\n",
+      "Progress: 62%\n",
+      "Progress: 63%\n",
+      "Progress: 64%\n",
+      "Progress: 65%\n",
+      "Progress: 66%\n",
+      "Progress: 67%\n",
+      "Progress: 68%\n",
+      "Progress: 69%\n",
+      "Progress: 70%\n",
+      "Progress: 71%\n",
+      "Progress: 72%\n",
+      "Progress: 73%\n",
+      "Progress: 74%\n",
+      "Progress: 75%\n",
+      "Progress: 76%\n",
+      "Progress: 77%\n",
+      "Progress: 78%\n",
+      "Progress: 79%\n",
+      "Progress: 80%\n",
+      "Progress: 81%\n",
+      "Progress: 82%\n",
+      "Progress: 83%\n",
+      "Progress: 84%\n",
+      "Progress: 85%\n",
+      "Progress: 86%\n",
+      "Progress: 87%\n",
+      "Progress: 88%\n",
+      "Progress: 89%\n",
+      "Progress: 90%\n",
+      "Progress: 91%\n",
+      "Progress: 92%\n",
+      "Progress: 93%\n",
+      "Progress: 94%\n",
+      "Progress: 95%\n",
+      "Progress: 96%\n",
+      "Progress: 97%\n",
+      "Progress: 98%\n",
+      "Progress: 99%\n",
+      "         word1        word2        word3 freq\n",
+      "0      testing  alternative       models   11\n",
+      "1       models  attitudinal       change   10\n",
+      "2      academy   management      journal    9\n",
+      "3  alternative       models  attitudinal    9\n",
+      "4       likert      profile        items    9\n"
      ]
     }
    ],
@@ -4189,21 +4293,24 @@
     "    # Close reading file\n",
     "    file_open.close()\n",
     "    \n",
-    "    # Create Dataframe\n",
-    "    # Data\n",
-    "    data = []\n",
-    "    for words, freq in freq_list:\n",
-    "        assert len(words) == 3\n",
-    "        data.append([words[0], words[1], words[2], freq])\n",
+    "    \"\"\" [START] Create Dataframe \"\"\" \n",
+    "    \n",
+    "#     # Data\n",
+    "#     data = []\n",
+    "#     for words, freq in freq_list:\n",
+    "#         assert len(words) == 3\n",
+    "#         data.append([words[0], words[1], words[2], freq])\n",
     "\n",
-    "    # Columns\n",
-    "    columns = [\"word1\", \"word2\", \"word3\", \"freq\"]\n",
+    "#     # Columns\n",
+    "#     columns = [\"word1\", \"word2\", \"word3\", \"freq\"]\n",
     "\n",
-    "    # Index\n",
-    "    index = list(range(len(freq_list)))\n",
+    "#     # Index\n",
+    "#     index = list(range(len(freq_list)))\n",
     "\n",
-    "    # DataFrame\n",
-    "    dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "#     # DataFrame\n",
+    "#     dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "\n",
+    "    \"\"\" [END] Create Dataframe \"\"\" \n",
     "    \n",
     "    # Write to output file\n",
     "    for words, freq in freq_list:\n",
