Mapping In Parallelism; Highly Accelerated Mapping Process

--- a/N-Gram/FixedMappingVersion/Mapping_Parallel.ipynb
+++ b/N-Gram/FixedMappingVersion/Mapping_Parallel.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,9 @@
     "import numpy as np\n",
     "\n",
     "import csv\n",
-    "import zipfile"
+    "import zipfile\n",
+    "\n",
+    "import threading"
    ]
   },
   {
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,16 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def report_progress(progress, total, lbar_prefix = '', rbar_prefix=''):\n",
     "    percent = round(progress / float(total) * 100, 2)\n",
-    "    buf = \"{0}|{1}| {2}{3}/{4} {5}% \".format(lbar_prefix, ('#' * round(percent)).ljust(100, '-'),\n",
+    "    buf = \"{0}|{1}| {2}{3}/{4} {5}%\\r\".format(lbar_prefix, ('#' * round(percent)).ljust(100, '-'),\n",
     "        rbar_prefix, progress, total, percent)\n",
     "    sys.stdout.write(buf)\n",
-    "    sys.stdout.write('\\r')\n",
     "    sys.stdout.flush()\n",
     "\n",
     "\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "4  Culture       1     bureaucratization"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,26 +581,26 @@
     "Mapping words in the freq_list to the dictionaries and get the match rates\n",
     "@return: [Culture_Rate, Demographic_Rate, Relational_Rate]\n",
     "\"\"\"\n",
-    "def get_mapping_rate(freq_list):\n",
+    "def get_mapping_rate(freq_list, n_number):\n",
     "    \n",
     "    # Initialize the match_counts => {subject : count} ...\n",
     "    match_counts = {}\n",
     "    for subject in dictionary_name_list:\n",
     "        match_counts[subject] = 0\n",
-    "    \n",
-    "    # Iterate Through Each Word In freq_list \n",
-    "    for words_freq_pair in freq_list:\n",
-    "        words, freq = words_freq_pair\n",
     "        \n",
-    "        # Identify n_number\n",
-    "        n_number = len(words)\n",
+    "    # Check Through Every Subject Dictionary\n",
+    "    for subject in dictionary_name_list:\n",
+    "        selected_dictionary = dataFrame_dictionary[(dataFrame_dictionary['Subject'] == subject) & \n",
+    "                                      (dataFrame_dictionary['N-Gram'] == n_number)]\n",
+    "        count_num = 0\n",
+    "        # Iterate Through Each Word In freq_list \n",
+    "        for words_freq_pair in freq_list:\n",
+    "            words, freq = words_freq_pair\n",
     "        \n",
-    "        # Check Through Every Subject Dictionary\n",
-    "        for subject in dictionary_name_list:\n",
-    "            selected_dictionary = dataFrame_dictionary[(dataFrame_dictionary['Subject'] == subject) & \n",
-    "                                          (dataFrame_dictionary['N-Gram'] == n_number)]\n",
     "            if selected_dictionary['Words'].str.contains(words).any():\n",
-    "                match_counts[subject] += 1\n",
+    "                count_num += 1\n",
+    "            \n",
+    "        match_counts[subject] = count_num\n",
     "    \n",
     "    match_rates = [\n",
     "        match_counts[\"Culture\"] / len(freq_list),\n",
@@ -614,21 +615,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Process Articles in a Articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_article(zip_file, article_info, data_set_id, total_progress, data):\n",
+    "    \n",
+    "    article_id, existence = article_info\n",
+    "\n",
+    "    # Match_Rates => [rates_for_n_1, rates_for_n_2, rates_for_n_3]\n",
+    "    match_rates = [None] * len(existence)\n",
+    "\n",
+    "    # Iterate Through N-Gram Folders\n",
+    "    for i in range(len(existence)):\n",
+    "        n_number = i + 1\n",
+    "\n",
+    "        # If the file exists\n",
+    "        if existence[i]:\n",
+    "            freq_list = get_freq_list(n_number, article_id, zip_file)\n",
+    "\n",
+    "            if len(freq_list) >= 1:\n",
+    "                # [Culture_Rate, Demographic_Rate, Relational_Rate]\n",
+    "                match_rates[i] = get_mapping_rate(freq_list, n_number)\n",
+    "            else:\n",
+    "                match_rates[i] = [None] * 3\n",
+    "        else:\n",
+    "            match_rates[i] = [None] * 3\n",
+    "\n",
+    "    # Add data to dataline\n",
+    "    dataline = [\n",
+    "        data_set_id, \n",
+    "        article_id,\n",
+    "    ]\n",
+    "\n",
+    "    # Add N1_Culture; N1_Demographic; N1_Relational; ...\n",
+    "    for match_rate_list in match_rates:\n",
+    "        for rate in match_rate_list:\n",
+    "            dataline.append(rate)\n",
+    "\n",
+    "    # Add Culture_Rate; Demographic_Rate; Relational_Rate;\n",
+    "    subject_rates = [sum([match_rate_list[i] if match_rate_list[i] is not None else 0 for match_rate_list in match_rates]) for i in range(len(dictionary_name_list))]\n",
+    "    dataline.extend(subject_rates)\n",
+    "\n",
+    "    # Add Classification\n",
+    "    dataline.append(dictionary_name_list[subject_rates.index(max(subject_rates))])\n",
+    "    \n",
+    "    # Track Progress\n",
+    "    report_progress(len(data), total_progress)\n",
+    "    \n",
+    "    # Append to data\n",
+    "    data.append(dataline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## [Method] Map Each File's Content To The Dictionary To Calculate The Rate\n",
     "    * DataFrame [Set_ID; File_ID; N1_Culture; N1_Demographic; N1_Relational; N2_Culture; N2_Demographic; N2_Relational; N3_Culture; N3_Demographic; N3_Relational; Culture_Rate; Demographic_Rate; Relational_Rate; Classification;]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = []\n",
+    "\n",
     "def create_mapping_dataframe():\n",
+    "    \n",
     "    \"\"\"\n",
     "    Data\n",
     "    \"\"\"\n",
-    "    data = []\n",
+    "    global data\n",
     "    \n",
     "    # Iterate Through All Article Sets\n",
     "    for article_zip_file_name in articles_zip_file_list:\n",
@@ -649,60 +714,25 @@
     "        # Count Progress\n",
     "        total_progress = len(filtered_file_list)\n",
     "        report_progress(0, total_progress)\n",
-    "        count = 0\n",
     "        \n",
-    "        # Iterate Each Article Through the filtered_file_list\n",
-    "        for article_info in filtered_file_list.items():\n",
-    "            article_id, existence = article_info\n",
+    "        # Catch Error\n",
+    "        try:\n",
+    "            threads = []\n",
     "            \n",
-    "            # Match_Rates => [rates_for_n_1, rates_for_n_2, rates_for_n_3]\n",
-    "            match_rates = [None] * len(existence)\n",
-    "            \n",
-    "            # Iterate Through N-Gram Folders\n",
-    "            for i in range(len(existence)):\n",
-    "                n_number = i + 1\n",
-    "                \n",
-    "                # If the file exists\n",
-    "                if existence[i]:\n",
-    "                    freq_list = get_freq_list(n_number, article_id, zip_file)\n",
-    "                    # [Culture_Rate, Demographic_Rate, Relational_Rate]\n",
-    "                    match_rates[i] = get_mapping_rate(freq_list)\n",
-    "                else:\n",
-    "                    match_rates[i] = [None] * 3\n",
-    "            \n",
-    "            # Add data to dataline\n",
-    "            dataline = [\n",
-    "                data_set_id, \n",
-    "                article_id,\n",
-    "            ]\n",
-    "            \n",
-    "            # Add N1_Culture; N1_Demographic; N1_Relational; ...\n",
-    "            for match_rate_list in match_rates:\n",
-    "                for rate in match_rate_list:\n",
-    "                    dataline.append(rate)\n",
+    "            for article_info in filtered_file_list.items():\n",
     "                    \n",
-    "            # Add Culture_Rate; Demographic_Rate; Relational_Rate;\n",
-    "            max_total_rate = float('-inf')\n",
-    "            max_index = 0\n",
-    "            for i in range(len(match_rates)):\n",
-    "                match_rate_list = match_rates[i]\n",
-    "                total_rate = sum(match_rate_list)\n",
-    "                if total_rate > max_total_rate:\n",
-    "                    max_total_rate = total_rate\n",
-    "                    max_index = i\n",
-    "                dataline.append(total_rate)\n",
+    "                t = threading.Thread(target=process_article, args=(zip_file, article_info, data_set_id, total_progress, data))\n",
+    "                threads.append(t)\n",
     "            \n",
-    "            # Add Classification\n",
-    "            if max_total_rate == 0:\n",
-    "                dataline.append(None)\n",
-    "            else:\n",
-    "                dataline.append(dictionary_name_list[max_index])\n",
+    "            for t in threads:\n",
+    "                t.start()\n",
     "                \n",
-    "            data.append(dataline)\n",
-    "            \n",
-    "            # Track Progress\n",
-    "            count += 1\n",
-    "            report_progress(count, total_progress)\n",
+    "            for t in threads:\n",
+    "                t.join()\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            pass\n",
     "                \n",
     "        # Report Progree Done        \n",
     "        report_progress_done()   \n",
@@ -746,7 +776,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|----------------------------------------------------------------------------------------------------| 4/36267 0.01% \r"
+      "|----------------------------------------------------------------------------------------------------| 68/36267 0.19%\r"
      ]
     }
    ],
@@ -756,6 +786,13 @@
     "### TEST ###\n",
     "dataFrame_mapping.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
