Second (and maybe better) solution for parallelism -- multiprocessing.Pool

--- a/N-Gram/FixedMappingVersion/Mapping_Parallel.ipynb
+++ b/N-Gram/FixedMappingVersion/Mapping_Parallel.ipynb
@@ -35,7 +35,8 @@
     "import csv\n",
     "import zipfile\n",
     "\n",
-    "import threading"
+    "import threading\n",
+    "from multiprocessing import Process, Manager"
    ]
   },
   {
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +757,7 @@
     "    DataFrame\n",
     "    \"\"\"\n",
     "    dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
-    "    \n",
+    "        \n",
     "    return dataframe"
    ]
   },
@@ -776,7 +777,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|----------------------------------------------------------------------------------------------------| 68/36267 0.19%\r"
+      "|----------------------------------------------------------------------------------------------------| 3/36267 0.01%\r"
      ]
     }
    ],
@@ -800,6 +801,126 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Backup] Pool Parallelism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing\n",
+    "from multiprocessing import Pool, Manager\n",
+    "\n",
+    "# Create a data\n",
+    "# manager = Manager()\n",
+    "# data = manager.list()\n",
+    "data = []\n",
+    "\n",
+    "# Best Working Efficiency is 1:1\n",
+    "thread_count = multiprocessing.cpu_count() # = Pool().__processes\n",
+    "\n",
+    "def create_mapping_dataframe():\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Data\n",
+    "    \"\"\"\n",
+    "    global data\n",
+    "    \n",
+    "    # Iterate Through All Article Sets\n",
+    "    for article_zip_file_name in articles_zip_file_list:\n",
+    "        \n",
+    "        # Extract Data Set ID\n",
+    "        data_set_id = parse_article_set_id(article_zip_file_name)\n",
+    "        \n",
+    "        # Path Format => \"../All_Articles/receipt-id-752441-part-000.zip\"\n",
+    "        article_zip_file_path = join(articles_root, article_zip_file_name)\n",
+    "        \n",
+    "        # Read The Zip File Without Unzipping\n",
+    "        zip_file = zipfile.ZipFile(article_zip_file_path)\n",
+    "        file_name_list = zip_file.namelist()\n",
+    "        \n",
+    "        # Filter by filename\n",
+    "        filtered_file_list = filter_by_filename(file_name_list)\n",
+    "        \n",
+    "        # Count Progress\n",
+    "        total_progress = len(filtered_file_list)\n",
+    "        report_progress(0, total_progress)\n",
+    "        \n",
+    "        # Catch Error\n",
+    "        try:\n",
+    "            \n",
+    "            pool = Pool(processes=thread_count)\n",
+    "            \n",
+    "            # TEST LIMIT\n",
+    "            limit = 0\n",
+    "            \n",
+    "            for article_info in filtered_file_list.items():\n",
+    "                \n",
+    "                if limit >= 10:\n",
+    "                    break\n",
+    "                limit += 1\n",
+    "                pool.apply_async(process_article, args=(zip_file, article_info, data_set_id, total_progress, data))  \n",
+    "\n",
+    "            pool.close()\n",
+    "            pool.join()\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            pass\n",
+    "                \n",
+    "        # Report Progree Done        \n",
+    "        report_progress_done()   \n",
+    "        \n",
+    "        break\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    Columns\n",
+    "    \"\"\"\n",
+    "    columns = [\"Set_ID\", \"File_ID\", \"N1_Culture\", \"N1_Demographic\", \"N1_Relational\", \n",
+    "               \"N2_Culture\", \"N2_Demographic\", \"N2_Relational\", \n",
+    "               \"N3_Culture\", \"N3_Demographic\", \"N3_Relational\",\n",
+    "               \"Culture_Rate\", \"Demographic_Rate\", \"Relational_Rate\", \"Classification\"]\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Index\n",
+    "    \"\"\"\n",
+    "    index = list(range(len(data)))\n",
+    "\n",
+    "    \"\"\"\n",
+    "    DataFrame\n",
+    "    \"\"\"\n",
+    "    dataframe = pd.DataFrame(list(data), columns=columns, index=index)\n",
+    "    \n",
+    "    return dataframe"
+   ]
   },
   {
    "cell_type": "code",
