--- a/N-Gram/FixedMappingVersion/Mapping.ipynb
+++ b/N-Gram/FixedMappingVersion/Mapping.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,9 @@
     "import numpy as np\n",
     "\n",
     "import csv\n",
-    "import zipfile"
+    "import zipfile\n",
+    "\n",
+    "import sqlite3"
    ]
   },
   {
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +160,12 @@
     "\"\"\"\n",
     "articles_root = \"../All_Articles\"\n",
     "\n",
+    "\"\"\"\n",
+    "Paths for Database\n",
+    "\"\"\"\n",
+    "db_root = \"./\"\n",
+    "db_name = \"my_result.db\"\n",
+    "\n",
     "### TEST ###\n",
     "display(dictionary_path.items())"
    ]
@@ -171,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +364,7 @@
        "4  Culture       1     bureaucratization"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,11 +628,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_mapping_dataframe():\n",
+    "\"\"\"\n",
+    "The function runs the mapping algorithm and stores every result into the database\n",
+    "@param break_point: the article_id of the last article the last time we finished \n",
+    "\"\"\"\n",
+    "def create_mapping_operation(break_point=None):\n",
+    "    \n",
+    "    # Connect to the database \"map_result.db\"\n",
+    "    conn = sqlite3.connect(join(db_root, db_name))\n",
+    "    # Create Cursor object so that we can execute SQL commands\n",
+    "    cur = conn.cursor()\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Columns\n",
+    "    \"\"\"\n",
+    "    columns = [\"Set_ID\", \"File_ID\", \n",
+    "               \"N1_Culture\", \"N1_Demographic\", \"N1_Relational\", \n",
+    "               \"N2_Culture\", \"N2_Demographic\", \"N2_Relational\", \n",
+    "               \"N3_Culture\", \"N3_Demographic\", \"N3_Relational\",\n",
+    "               \"Culture_Rate\", \"Demographic_Rate\", \"Relational_Rate\", \"Classification\"]\n",
+    "    \n",
     "    \"\"\"\n",
     "    Data\n",
     "    \"\"\"\n",
@@ -651,83 +678,106 @@
     "        report_progress(0, total_progress)\n",
     "        count = 0\n",
     "        \n",
-    "        # Iterate Each Article Through the filtered_file_list\n",
-    "        for article_info in filtered_file_list.items():\n",
-    "            article_id, existence = article_info\n",
+    "        # Catch Error\n",
+    "        try:\n",
+    "            # Start Working (continue from the last break point)\n",
+    "            start_index = True if break_point is None else False\n",
     "            \n",
-    "            # Match_Rates => [rates_for_n_1, rates_for_n_2, rates_for_n_3]\n",
-    "            match_rates = [None] * len(existence)\n",
-    "            \n",
-    "            # Iterate Through N-Gram Folders\n",
-    "            for i in range(len(existence)):\n",
-    "                n_number = i + 1\n",
+    "            # Iterate Each Article Through the filtered_file_list\n",
+    "            for article_info in filtered_file_list.items():\n",
+    "                article_id, existence = article_info\n",
     "                \n",
-    "                # If the file exists\n",
-    "                if existence[i]:\n",
-    "                    freq_list = get_freq_list(n_number, article_id, zip_file)\n",
-    "                    # [Culture_Rate, Demographic_Rate, Relational_Rate]\n",
-    "                    match_rates[i] = get_mapping_rate(freq_list)\n",
-    "                else:\n",
-    "                    match_rates[i] = [None] * 3\n",
-    "            \n",
-    "            # Add data to dataline\n",
-    "            dataline = [\n",
-    "                data_set_id, \n",
-    "                article_id,\n",
-    "            ]\n",
-    "            \n",
-    "            # Add N1_Culture; N1_Demographic; N1_Relational; ...\n",
-    "            for match_rate_list in match_rates:\n",
-    "                for rate in match_rate_list:\n",
-    "                    dataline.append(rate)\n",
-    "                    \n",
-    "            # Add Culture_Rate; Demographic_Rate; Relational_Rate;\n",
-    "            max_total_rate = float('-inf')\n",
-    "            max_index = 0\n",
-    "            for i in range(len(match_rates)):\n",
-    "                match_rate_list = match_rates[i]\n",
-    "                total_rate = sum(match_rate_list)\n",
-    "                if total_rate > max_total_rate:\n",
-    "                    max_total_rate = total_rate\n",
-    "                    max_index = i\n",
-    "                dataline.append(total_rate)\n",
-    "            \n",
-    "            # Add Classification\n",
-    "            if max_total_rate == 0:\n",
-    "                dataline.append(None)\n",
-    "            else:\n",
-    "                dataline.append(dictionary_name_list[max_index])\n",
+    "                # Track Progress\n",
+    "                count += 1\n",
+    "                report_progress(count, total_progress)\n",
     "                \n",
-    "            data.append(dataline)\n",
-    "            \n",
-    "            # Track Progress\n",
-    "            count += 1\n",
-    "            report_progress(count, total_progress)\n",
+    "                # Set a starting article_id\n",
+    "                if not start_index:\n",
+    "                    if article_id == break_point:\n",
+    "                        start_index = True\n",
+    "                    continue\n",
+    "\n",
+    "                # Match_Rates => [rates_for_n_1, rates_for_n_2, rates_for_n_3]\n",
+    "                match_rates = [None] * len(existence)\n",
+    "\n",
+    "                # Iterate Through N-Gram Folders\n",
+    "                for i in range(len(existence)):\n",
+    "                    n_number = i + 1\n",
+    "\n",
+    "                    # If the file exists\n",
+    "                    if existence[i]:\n",
+    "                        freq_list = get_freq_list(n_number, article_id, zip_file)\n",
+    "\n",
+    "                        if len(freq_list) >= 1:\n",
+    "                            # [Culture_Rate, Demographic_Rate, Relational_Rate]\n",
+    "                            match_rates[i] = get_mapping_rate(freq_list)\n",
+    "                        else:\n",
+    "                            match_rates[i] = [None] * 3\n",
+    "                    else:\n",
+    "                        match_rates[i] = [None] * 3\n",
+    "\n",
+    "                # Add data to dataline\n",
+    "                dataline = [\n",
+    "                    data_set_id, \n",
+    "                    article_id,\n",
+    "                ]\n",
+    "\n",
+    "                # Add N1_Culture; N1_Demographic; N1_Relational; ...\n",
+    "                for match_rate_list in match_rates:\n",
+    "                    for rate in match_rate_list:\n",
+    "                        dataline.append(rate)\n",
+    "\n",
+    "                # Add Culture_Rate; Demographic_Rate; Relational_Rate;\n",
+    "                subject_rates = [sum([match_rate_list[i] if match_rate_list[i] is not None else 0 for match_rate_list in match_rates]) for i in range(len(dictionary_name_list))]\n",
+    "                dataline.extend(subject_rates)\n",
+    "\n",
+    "                # Add Classification\n",
+    "                dataline.append(dictionary_name_list[subject_rates.index(max(subject_rates))])\n",
+    "                \n",
+    "                # Write the dataline into the database\n",
+    "                assert len(dataline) == len(columns)\n",
+    "                insert_value = \"insert into map_result values \" \\\n",
+    "                    \"('{set_id}', '{file_id}', \" \\\n",
+    "                    \"{n1_culture}, {n1_demographic}, {n1_relational}, \" \\\n",
+    "                    \"{n2_culture}, {n2_demographic}, {n2_relational}, \" \\\n",
+    "                    \"{n3_culture}, {n3_demographic}, {n3_relational}, \" \\\n",
+    "                    \"{culture_rate}, {demographic_rate}, {relational_rate}, '{classification}')\".format(set_id=dataline[0], file_id=dataline[1], \n",
+    "                                                                                                       n1_culture=dataline[2], n1_demographic=dataline[3], n1_relational=dataline[4], \n",
+    "                                                                                                       n2_culture=dataline[5], n2_demographic=dataline[6], n2_relational=dataline[7],\n",
+    "                                                                                                       n3_culture=dataline[8], n3_demographic=dataline[9], n3_relational=dataline[10],\n",
+    "                                                                                                       culture_rate=dataline[11], demographic_rate=dataline[12], relational_rate=dataline[13], classification=dataline[14])\n",
+    "                cur.execute(insert_value)\n",
+    "                conn.commit()\n",
+    "                \n",
+    "                # # Append value to data\n",
+    "                # data.append(dataline)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            cur.close()\n",
+    "            conn.close()\n",
+    "            pass\n",
     "                \n",
     "        # Report Progree Done        \n",
     "        report_progress_done()   \n",
     "        \n",
     "        break\n",
-    "        \n",
-    "    \"\"\"\n",
-    "    Columns\n",
-    "    \"\"\"\n",
-    "    columns = [\"Set_ID\", \"File_ID\", \"N1_Culture\", \"N1_Demographic\", \"N1_Relational\", \n",
-    "               \"N2_Culture\", \"N2_Demographic\", \"N2_Relational\", \n",
-    "               \"N3_Culture\", \"N3_Demographic\", \"N3_Relational\",\n",
-    "               \"Culture_Rate\", \"Demographic_Rate\", \"Relational_Rate\", \"Classification\"]\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Index\n",
-    "    \"\"\"\n",
-    "    index = list(range(len(data)))\n",
-    "\n",
-    "    \"\"\"\n",
-    "    DataFrame\n",
-    "    \"\"\"\n",
-    "    dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
     "    \n",
-    "    return dataframe"
+    "    # Close the database and cursor\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "#     \"\"\"\n",
+    "#     Index\n",
+    "#     \"\"\"\n",
+    "#     index = list(range(len(data)))\n",
+    "\n",
+    "#     \"\"\"\n",
+    "#     DataFrame\n",
+    "#     \"\"\"\n",
+    "#     dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
+    "    \n",
+    "#     return dataframe"
    ]
   },
   {
@@ -746,15 +796,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|----------------------------------------------------------------------------------------------------| 4/36267 0.01% \r"
+      "|----------------------------------------------------------------------------------------------------| 62/36267 0.17% \r"
      ]
     }
    ],
    "source": [
-    "dataFrame_mapping = create_mapping_dataframe()\n",
+    "create_mapping_operation(break_point=\"10.2307_40405624\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataFrame_mapping = create_mapping_dataframe()\n",
     "\n",
     "### TEST ###\n",
-    "dataFrame_mapping.head()"
+    "# dataFrame_mapping.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run This If Empty Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the database \"map_result.db\"\n",
+    "conn = sqlite3.connect(join(db_root, db_name))\n",
+    "# Create Cursor object so that we can execute SQL commands\n",
+    "cur = conn.cursor()\n",
+    "# Create table\n",
+    "create_table = \"create table books (title text, author text, lang text) \"\n",
+    "create_table = 'create table if not exists map_result ' \\\n",
+    "    '(set_id text, file_id text, ' \\\n",
+    "    'n1_culture real, n1_demographic real, n1_relational real, ' \\\n",
+    "    'n2_culture real, n2_demographic real, n2_relational real, ' \\\n",
+    "    'n3_culture real, n3_demographic real, n3_relational real, ' \\\n",
+    "    'culture_rate real, demographic_rate real, relational_rate real, classification text) '\n",
+    "cur.execute(create_table)\n",
+    "\n",
+    "# # Insert value\n",
+    "# insert_value = \"insert into map_result values \" \\\n",
+    "#     \"('set_id_sample', 'file_id_sample', \" \\\n",
+    "#     \"0.01, 0.01, 0.01, \" \\\n",
+    "#     \"0.02, 0.02, 0.02, \" \\\n",
+    "#     \"0.03, 0.03, 0.03, \" \\\n",
+    "#     \"0.99, 0.99, 0.99, 'culture')\"\n",
+    "# cur.execute(insert_value)\n",
+    "\n",
+    "# Commit the changes and close\n",
+    "conn.commit()\n",
+    "cur.close()\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "     001\n",
+      "     10.2307_40405624\n",
+      "     0.014072847682119206\n",
+      "     0.0024834437086092716\n",
+      "     0.015728476821192054\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.014072847682119206\n",
+      "     0.0024834437086092716\n",
+      "     0.015728476821192054\n",
+      "     Relational\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Connect to the database \"map_result.db\"\n",
+    "conn = sqlite3.connect(join(db_root, db_name))\n",
+    "# Create Cursor object so that we can execute SQL commands\n",
+    "cur = conn.cursor()\n",
+    "cur.execute('select * from map_result')\n",
+    "display(cur.fetchall()[-1])\n",
+    "cur.close()\n",
+    "conn.close()"
    ]
   },
   {
