--- a/N-Gram/FixedMappingVersion/Mapping.ipynb
+++ b/N-Gram/FixedMappingVersion/Mapping.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "4  Culture       1     bureaucratization"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,13 +628,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "The function runs the mapping algorithm and stores every result into the database\n",
-    "@param break_point: the article_id of the last article the last time we finished \n",
+    "@param break_point: the article_id of the last article the last time we finished running the function\n",
     "\"\"\"\n",
     "def create_mapping_operation(break_point=None):\n",
     "    \n",
@@ -712,9 +712,9 @@
     "                            # [Culture_Rate, Demographic_Rate, Relational_Rate]\n",
     "                            match_rates[i] = get_mapping_rate(freq_list)\n",
     "                        else:\n",
-    "                            match_rates[i] = [None] * 3\n",
+    "                            match_rates[i] = [0,] * 3\n",
     "                    else:\n",
-    "                        match_rates[i] = [None] * 3\n",
+    "                        match_rates[i] = [0,] * 3\n",
     "\n",
     "                # Add data to dataline\n",
     "                dataline = [\n",
@@ -730,7 +730,7 @@
     "                # Add Culture_Rate; Demographic_Rate; Relational_Rate;\n",
     "                subject_rates = [sum([match_rate_list[i] if match_rate_list[i] is not None else 0 for match_rate_list in match_rates]) for i in range(len(dictionary_name_list))]\n",
     "                dataline.extend(subject_rates)\n",
-    "\n",
+    "                \n",
     "                # Add Classification\n",
     "                dataline.append(dictionary_name_list[subject_rates.index(max(subject_rates))])\n",
     "                \n",
@@ -753,10 +753,11 @@
     "                # data.append(dataline)\n",
     "\n",
     "        except Exception as e:\n",
-    "            print(e)\n",
+    "            print(\"Error Message: {}\\n\".format(e))\n",
+    "            print(\"Article_Id: \" + article_id)\n",
     "            cur.close()\n",
     "            conn.close()\n",
-    "            pass\n",
+    "            return\n",
     "                \n",
     "        # Report Progree Done        \n",
     "        report_progress_done()   \n",
@@ -766,18 +767,8 @@
     "    # Close the database and cursor\n",
     "    cur.close()\n",
     "    conn.close()\n",
-    "\n",
-    "#     \"\"\"\n",
-    "#     Index\n",
-    "#     \"\"\"\n",
-    "#     index = list(range(len(data)))\n",
-    "\n",
-    "#     \"\"\"\n",
-    "#     DataFrame\n",
-    "#     \"\"\"\n",
-    "#     dataframe = pd.DataFrame(data, columns=columns, index=index)\n",
     "    \n",
-    "#     return dataframe"
+    "    return"
    ]
   },
   {
@@ -796,12 +787,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|----------------------------------------------------------------------------------------------------| 62/36267 0.17% \r"
+      "Total Count: 581\n",
+      "[]\n",
+      "     001\n",
+      "     10.1086_374187\n",
+      "     0.010423053341508276\n",
+      "     0.00674432863274065\n",
+      "     0.011036174126302882\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.010423053341508276\n",
+      "     0.00674432863274065\n",
+      "     0.011036174126302882\n",
+      "     Relational\n",
+      "|##--------------------------------------------------------------------------------------------------| 635/36267 1.75% \r"
      ]
     }
    ],
    "source": [
-    "create_mapping_operation(break_point=\"10.2307_40405624\")"
+    "create_mapping_operation(break_point=get_breakpoint_article_id())"
    ]
   },
   {
@@ -809,18 +817,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# dataFrame_mapping = create_mapping_dataframe()\n",
-    "\n",
-    "### TEST ###\n",
-    "# dataFrame_mapping.head()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run This If Empty Database"
+    "## Show Database Content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Count: 581\n",
+      "[]\n",
+      "     001\n",
+      "     10.1086_374187\n",
+      "     0.010423053341508276\n",
+      "     0.00674432863274065\n",
+      "     0.011036174126302882\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.0\n",
+      "     0.010423053341508276\n",
+      "     0.00674432863274065\n",
+      "     0.011036174126302882\n",
+      "     Relational\n",
+      "10.1086_374187\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_breakpoint_article_id():\n",
+    "    # Connect to the database \"map_result.db\"\n",
+    "    conn = sqlite3.connect(join(db_root, db_name))\n",
+    "    # Create Cursor object so that we can execute SQL commands\n",
+    "    cur = conn.cursor()\n",
+    "    # Select all data entries from the table \n",
+    "    cur.execute('SELECT * FROM map_result')\n",
+    "    # Display all data collected\n",
+    "    database_collection = cur.fetchall()\n",
+    "    print(\"Total Count: {count}\".format(count=len(database_collection)))\n",
+    "    display(database_collection[-1])\n",
+    "    breakpoint_id = database_collection[-1][1]\n",
+    "    # Close the cursor and the database\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "    return breakpoint_id\n",
+    "\n",
+    "breakpoint_id = get_breakpoint_article_id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Warning] Only Run This If Empty Database"
    ]
   },
   {
@@ -860,42 +947,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "     001\n",
-      "     10.2307_40405624\n",
-      "     0.014072847682119206\n",
-      "     0.0024834437086092716\n",
-      "     0.015728476821192054\n",
-      "     0.0\n",
-      "     0.0\n",
-      "     0.0\n",
-      "     0.0\n",
-      "     0.0\n",
-      "     0.0\n",
-      "     0.014072847682119206\n",
-      "     0.0024834437086092716\n",
-      "     0.015728476821192054\n",
-      "     Relational\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Connect to the database \"map_result.db\"\n",
-    "conn = sqlite3.connect(join(db_root, db_name))\n",
-    "# Create Cursor object so that we can execute SQL commands\n",
-    "cur = conn.cursor()\n",
-    "cur.execute('select * from map_result')\n",
-    "display(cur.fetchall()[-1])\n",
-    "cur.close()\n",
-    "conn.close()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
