--- a/N-Gram/FixedMappingVersion/FileExtraction.ipynb
+++ b/N-Gram/FixedMappingVersion/FileExtraction.ipynb
@@ -2,68 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from os import listdir\n",
     "from os.path import isfile, join\n",
     "\n",
-    "import re\n",
-    "import sys\n",
-    "import time\n",
-    "from collections import Counter\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import csv\n",
-    "import zipfile\n",
-    "from shutil import *\n",
-    "import pickle\n",
-    "\n",
-    "import sqlite3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## [Method] Parse Article Number ID"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.1086_210007\n",
-      "10.1086_210007\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\" Define function getting article ID by the file-name\n",
-    "Pattern: journal-article-10.1086_210007-ngram1.txt\n",
-    "\"\"\"\n",
-    "def parse_article_id(filename):\n",
-    "    id_number_lst = re.findall(\"journal-article-(.+)-+\", filename)\n",
-    "    if len(id_number_lst) == 1:\n",
-    "        return id_number_lst[0]\n",
-    "    id_number_lst = re.findall(\"journal-article-(.+)\\.+\", filename)\n",
-    "    if len(id_number_lst) == 1:\n",
-    "        return id_number_lst[0]\n",
-    "    print(\"Parse_ID Error: Filename does not match pattern. \")\n",
-    "    return None\n",
-    "\n",
-    "### TEST ###\n",
-    "print(parse_article_id(\"journal-article-10.1086_210007-ngram1.txt\"))\n",
-    "print(parse_article_id(\"journal-article-10.1086_210007.xml\"))"
+    "import zipfile"
    ]
   },
   {
@@ -75,18 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "articles_root = \"../Soc_MGT_OB_1980_2018\"\n",
     "extracted_articles_root = \"../ExtractedZipFiles\"\n",
-    "demo_files_root = \"../ExtractedZipFiles/demo\"\n",
     "\n",
-    "match_base = \"metadata\"\n",
-    "folders = [\"metadata\", \"ngram1\", \"ngram2\", \"ngram3\"]\n",
-    "\n",
-    "file_set_id = \"005\""
+    "file_set_id = \"008\""
    ]
   },
   {
